--- a/switch.html
+++ b/switch.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body background="tu.jpg" >
+<body >
 <p>
 <video id="myvideo" height="650px" width="500px"; class="center" src="male.mp4" type="video/mp4"></video>
 </p>
