--- a/FemaleAgent.html
+++ b/FemaleAgent.html
@@ -20,14 +20,20 @@
         src="Female_animation.mp4"
         type="video/mp4"
       ></video>
-        <div style = "display: flex;justify-content: center;align-items: center; margin-top: 20px;">
+       <!-- <div style = "display: flex;justify-content: center;align-items: center; margin-top: 20px;">
         <form id="input">
 
       <input style="height: 26px;border-radius: 8px;padding: 8px;width: 158px;" placeholder="Enter emotion" id = 'emotion-input'></form>
       <div style = "margin-right: 20px;"></div>
-<!--      <button onclick="executeGivenEmotion()">Check</button>-->
-    </div>
+      <button onclick="executeGivenEmotion()">Check</button>
+    </div>-->
      </p>
+
+    <input type="btn" value="click" onclick="hi();smile();sad();surprise();"/>
+     <div class="center"><button onclick="hi()" class="button button1">Hi!</button></div>
+    <div class="center"><button onclick="smile()" class="button button1">Smile!</button></div>
+    <div class="center"><button onclick="sad()" class="button button1">Sad!</button></div>
+    <div class="center"><button onclick="surprise()" class="button button1">Surprise!</button></div
   </body>
 </body>
 </html>
