--- a/MaleAgent.html
+++ b/MaleAgent.html
@@ -159,7 +159,7 @@
   }
 
   button {
-    padding: 0.75rem 1.5rem;
+    padding: 10px;
     font-family: inherit;
     background-color: #055a05;
     border: 1px solid #055a05;
