--- a/MaleAgent.html
+++ b/MaleAgent.html
@@ -122,7 +122,8 @@
   }
 </script>
 
-<style type="text/css">
+
+ <style type="text/css">
   .center {
     margin-left: auto;
     margin-right: auto;
@@ -153,13 +154,24 @@
     margin: 0;
     background-size:cover;
   }
-
+  .button {
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
   p {
     opacity: 1;
   }
 
   button {
-    padding: 10px;
+    padding: 0.75rem 1.5rem;
     font-family: inherit;
     background-color: #055a05;
     border: 1px solid #055a05;
@@ -180,5 +192,23 @@
     margin: 0;
     padding: 0;
   }
+  .imgbox {
+    display: grid;
+    height: 100%;
+  }
+  .center-fit {
+    max-width: 100%;
+    max-height: 100vh;
+    margin: auto;
+  }
+  .flat {
+    background-color: transparent;
+    color: #1b72e4;
+    border: none;
+  }
 
+  .flat:hover,
+  .flat:active {
+    background-color: #edd2ff;
+  }
 </style>
