--- a/FemaleAgent.html
+++ b/FemaleAgent.html
@@ -30,10 +30,11 @@
      </p>
 
     <input type="btn" value="click" onclick="hi();smile();sad();surprise();"/>
-     <div class="center"><button onclick="hi()" class="button button1">Hi!</button></div>
-    <div class="center"><button onclick="smile()" class="button button1">Smile!</button></div>
-    <div class="center"><button onclick="sad()" class="button button1">Sad!</button></div>
-  <div class="center"><button onclick="surprise()" class="button button1">Surprise!</button></div>
+     <div class="center"><button onclick="hi()" class="button button1">Hi!</button>
+       <button onclick="smile()" class="button button1">Smile!</button>
+       <button onclick="sad()" class="button button1">Sad!</button>
+       <button onclick="surprise()" class="button button1">Surprise!</button>
+  </div>
   </body>
 </body>
 </html>
