--- a/FemaleAgent.html
+++ b/FemaleAgent.html
@@ -29,7 +29,7 @@
     </div>-->
      </p>
 
-    <input type="btn" value="click" onclick="hi();smile();sad();surprise();"/>
+<!--     <input type="btn" value="click" onclick="hi();smile();sad();surprise();"/> -->
      <div class="center"><button onclick="hi()" class="button button1">Hi!</button>
        <button onclick="smile()" class="button button1">Smile!</button>
        <button onclick="sad()" class="button button1">Sad!</button>
